Prevent chart menu item lables from being wrapped.

--- a/pivot4j-analytics/src/main/webapp/resources/pivot4j/css/style.css
+++ b/pivot4j-analytics/src/main/webapp/resources/pivot4j/css/style.css
@@ -658,6 +658,11 @@ span.unit {
 	margin-right: 1px;
 }
 
+#toolbar-form\3A charts_menu .ui-menuitem-text {
+	display: block;
+	width: 140px;
+}
+
 @media print {
 	.ui-button {
 		display: none !important;
